<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    tools:context=".listFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/listLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/frenchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C7878"
                android:src="@drawable/french_bulldog" />

            <TextView
                android:id="@+id/frenchBulldog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FRENCH"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RATING"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/frenchRatingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/englishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C7878"
                android:src="@drawable/english_bulldog" />

            <TextView
                android:id="@+id/englishBulldog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ENGLISH"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RATING"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/englishRatingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/belgianButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C7878"
                android:src="@drawable/belgian_malinois" />

            <TextView
                android:id="@+id/belgian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BELGIAN"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RATING"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/belgianRatingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/germanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C7878"
                android:src="@drawable/german_shepherd" />

            <TextView
                android:id="@+id/german"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GERMAN"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RATING"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/germanRatingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/chichuahuaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C7878"
                android:src="@drawable/chihuahuas" />

            <TextView
                android:id="@+id/chui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CHIU"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RATING"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/chuiRatingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>